--- a/ARNDevTool/package.json
+++ b/ARNDevTool/package.json
@@ -8,7 +8,15 @@
   },
   "dependencies": {
     "react": "15.4.2",
-    "react-native": "0.41.2"
+    "react-native": "0.41.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.2.1",
+    "redux-logger": "^2.8.1",
+    "redux-persist": "^4.4.2",
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.4.4",
+    "superagent-defaults": "^0.1.14"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
